fix products loop display on mobile

--- a/assets/css/woocommerce/woocommerce.css
+++ b/assets/css/woocommerce/woocommerce.css
@@ -382,9 +382,6 @@ Responsive
 
 /* Product search restults and archive pages */
 .woocommerce ul.products {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   text-align: center;
@@ -909,3 +906,5 @@ body.woocommerce-order-received .woocommerce-thankyou-order-received {
     display: initial;
   }
 }
+
+/*# sourceMappingURL=woocommerce.css.map */
