--- a/assets/sass/woocommerce/catalog-pages.scss
+++ b/assets/sass/woocommerce/catalog-pages.scss
@@ -15,9 +15,6 @@
 
 /* Product search restults and archive pages */
 .woocommerce ul.products {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
 	-ms-flex-wrap: wrap;
 	    flex-wrap: wrap;
 	text-align: center;
